// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migration.migrate creates the index and alias if it does not exist 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "978bb44ab5e6917a867e5089ddde93a20b3b2bb8",
                "migrationIds": Array [
                  "p1m1",
                ],
                "migrationsChecksum": "24baaf699366406b66a8bc2178c96f3472b3a389",
              },
              Object {
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "c8833cb199ee87a967bae553c0c4fd4ac30a530b",
                "migrationIds": Array [
                  "p2m1",
                ],
                "migrationsChecksum": "a127f2492bd13d4bcf9b16cd5c82bb6eacbf740f",
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate does nothing if there are no migrations defined 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "aliases": Object {},
    "mappings": Object {},
    "settings": Object {},
  },
}
`;

exports[`Migration.migrate existing indices are converted to aliases and migrated 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-152b47de897b0a5302d827307c8fe523b9faff9c": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"fullName\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "a0bdf0a0f73308c651498cd933546db273c94c35",
                "migrationIds": Array [
                  "p1m1",
                  "p1m2",
                  "p1m3",
                ],
                "migrationsChecksum": "8f79508f405b3e1a3488b5f384b4009f71cbc4d5",
              },
              Object {
                "id": "p3",
                "mappings": "{\\"p3\\":{\\"properties\\":{\\"shtuff\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "43d3b076d88915a50a3d21d1a5cb5ef6ae03095d",
                "migrationIds": Array [
                  "p3m1",
                  "p3m2",
                ],
                "migrationsChecksum": "6b3d741eee260792b4a44566671be3cff587ff02",
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:newseedsofcontemplation": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "Thomas Merton",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p3:for-old-plugin-1": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "OLD SHTUFF",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
      "p3:p3doc": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "SHTUFF HAPPENS",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
      "shut_the_front_door:2": Object {
        "_source": Object {
          "shut_the_front_door": Object {
            "meaning": 42,
          },
          "type": "shut_the_front_door",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p3:for-old-plugin-1": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "Old Shtuff",
          },
          "type": "p3",
        },
      },
      "shut_the_front_door:2": Object {
        "_source": Object {
          "shut_the_front_door": Object {
            "meaning": 42,
          },
          "type": "shut_the_front_door",
        },
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-152b47de897b0a5302d827307c8fe523b9faff9c": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-152b47de897b0a5302d827307c8fe523b9faff9c": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "fullName": Object {
                  "type": "text",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": Object {
                  "type": "text",
                },
              },
            },
            "shut_the_front_door": Object {
              "properties": Object {
                "meaning": "integer",
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": "text",
              },
            },
            "shut_the_front_door": Object {
              "properties": Object {
                "meaning": "integer",
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-152b47de897b0a5302d827307c8fe523b9faff9c": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate existing previously migrated index only runs new migrations 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-69e3fecfb46106b7d1eeac42f8520ddf948add70": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "c8833cb199ee87a967bae553c0c4fd4ac30a530b",
                "migrationIds": Array [
                  "p2m1",
                ],
                "migrationsChecksum": "a127f2492bd13d4bcf9b16cd5c82bb6eacbf740f",
              },
              Object {
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"fullName\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "a0bdf0a0f73308c651498cd933546db273c94c35",
                "migrationIds": Array [
                  "p1m1",
                  "p1m2",
                  "p1m3",
                ],
                "migrationsChecksum": "8f79508f405b3e1a3488b5f384b4009f71cbc4d5",
              },
              Object {
                "id": "p3",
                "mappings": "{\\"p3\\":{\\"properties\\":{\\"shtuff\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "43d3b076d88915a50a3d21d1a5cb5ef6ae03095d",
                "migrationIds": Array [
                  "p3m1",
                  "p3m2",
                ],
                "migrationsChecksum": "6b3d741eee260792b4a44566671be3cff587ff02",
              },
            ],
            "previousIndex": ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:newseedsofcontemplation": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "Thomas Merton",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "fullName": "This Was Updated",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
      "p3:p3doc": Object {
        "_source": Object {
          "p3": Object {
            "shtuff": "SHTUFF HAPPENS",
          },
          "type": "p3",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "978bb44ab5e6917a867e5089ddde93a20b3b2bb8",
                "migrationIds": Array [
                  "p1m1",
                ],
                "migrationsChecksum": "24baaf699366406b66a8bc2178c96f3472b3a389",
              },
              Object {
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "c8833cb199ee87a967bae553c0c4fd4ac30a530b",
                "migrationIds": Array [
                  "p2m1",
                ],
                "migrationsChecksum": "a127f2492bd13d4bcf9b16cd5c82bb6eacbf740f",
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 2,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "This Was Updated",
          },
          "type": "p1",
        },
        "_version": 1,
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-69e3fecfb46106b7d1eeac42f8520ddf948add70": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-69e3fecfb46106b7d1eeac42f8520ddf948add70": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "fullName": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "p3": Object {
              "properties": Object {
                "shtuff": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-69e3fecfb46106b7d1eeac42f8520ddf948add70": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate migrations will run, if forced even if index is in migrating state 1`] = `
Object {
  "data": Object {
    ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "p1",
                "mappings": "{\\"p1\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "978bb44ab5e6917a867e5089ddde93a20b3b2bb8",
                "migrationIds": Array [
                  "p1m1",
                ],
                "migrationsChecksum": "24baaf699366406b66a8bc2178c96f3472b3a389",
              },
              Object {
                "id": "p2",
                "mappings": "{\\"p2\\":{\\"properties\\":{\\"thing\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "c8833cb199ee87a967bae553c0c4fd4ac30a530b",
                "migrationIds": Array [
                  "p2m1",
                ],
                "migrationsChecksum": "a127f2492bd13d4bcf9b16cd5c82bb6eacbf740f",
              },
            ],
            "previousIndex": ".sample-index-3.2.1-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "p1:sample": Object {
        "_source": Object {
          "p1": Object {
            "name": "P1 Name!",
          },
          "type": "p1",
          "updated_at": undefined,
        },
      },
      "p2:p2doc": Object {
        "_source": Object {
          "p2": Object {
            "thing": "P2 Thingamabob",
          },
          "type": "p2",
          "updated_at": undefined,
        },
      },
    },
    ".sample-index-3.2.1-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".sample-index": Object {
        ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
          "aliases": Object {
            ".sample-index": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "p1": Object {
              "properties": Object {
                "name": Object {
                  "type": "text",
                },
              },
            },
            "p2": Object {
              "properties": Object {
                "thing": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".sample-index-3.2.1-original": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".sample-index-3.2.1-f105a95560c50293c08d0ef7e346d8feda980e8f": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".sample-index-3.2.1-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;
